welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:21: error: not found: value marquer
  marquer sol()
  ^