welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
  for (cpt <- 1 to 9){
    faireMotif()
  }
}

def marquerSol(){
  baisseBrosse()
  leveBrosse()
}

def faireV(){
  avance(2)
  marquerSol()
  gauche()
  avance()
  marquerSol()
  recule()
  droite()
  avance()
  marquer sol()
  avance(2)
  gauche()
}

def faireMotif(){
  for (cpt <- 1 to 4){
    faireV()
  }
}